FIX测试发现的问题